# motor_gui

./: CMakeLists.txt  config.json
ControlLib/demo/: demo1.cpp
ControlLib/include/: callback.hpp  config.hpp  config_manager.hpp  dji_motor.hpp
ControlLib/include/nlohmann/: json.hpp
ControlLib/src/: config_manager.cpp  dji_motor.cpp
src/: MainWindow.cpp  MainWindow.h  MotorPanel.cpp  MotorPanel.h  MotorWorker.cpp  MotorWorker.h
